28/05/09 Julien Dutheil
* A hell of bugs fixed!
* Better support for the new model syntax in PhylogeneticsApplicationTools
* Support for the Nexus tree format (single tree, read only for now).

15/05/09 Julien Dutheil
* New syntax for model specification in PhylogeneticApplicationTools.

07/03/09 Julien Dutheil
* Added pseudo counts in substitution models, when setting equilibrium
frequencies [biopp-help-forum:139]
* Changed SubstitutionModel interface in order to return references instead of
  hard copy of matrices.
* Models updated to use the new functions in MatrixTools.

29/03/09 Julien Dutheil
* MarkovModulatedSubstitutionModel inherits from AbstractParametrizable.
* Several changes to support the new parameter aliasing function,
	including in PhylogeneticApplicationTools.

28/03/09 [biopp-devel-forum:19]
* Now empirical substitution models can be properly loaded with non-homogeneous models.

17/03/09 [biopp-devel-forum:11]
* Bug fixed in PhylogeneticApplicationTools::optimizeParameters.
* Also fixed error in documentation of JC models.

19/02/09 [biopp-devel-forum:6]
* Method clone in abstract[Reversible]SubstitutionModel.

02/02/09 Julien Dutheil (tnx to Emmanuel Douzery!)
* Bug fixed in TreeTools::treeToParenthesis: no more seg fault if tree is
  empty.
* Progress bar in computeBootstrapValues.	

20/01/09 Julien Dutheil
* Added getBootstrapValue method in Node.
* New PropertyNotFoundException and property methods update.

05/01/09 Julien Dutheil
* Added Rivas and Eddy substitution model with gaps.
* Small bug fixed in Markov-modulated substitution models.

18/01/08 -*- Version 1.7.0 -*-

11/12/08 Julien Dutheil
* Bug fixed in BioNJ.

10/12/08 Celine Scornavacca & Julien Dutheil
* Bug fixed int Node::getName and NodeException: no more recursive call!

07/12/08 Julien Dutheil
* New getRootFrequenciesSet in SubstitutionModelSet.
* New getStatesFrequenciesSet in MarkovModulatedFrequenciesSet.

04/12/08 Julien Dutheil