@@ -1,3 +1,6 @@
+05/06/09 Julien Dutheil
+* Bug fixed in Newick parser!
+
 28/05/09 Julien Dutheil
 * A hell of bugs fixed!
 * Better support for the new model syntax in PhylogeneticsApplicationTools
